WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80371
Checks for dead variables are not sufficient when fixing the expected values in DFG OSR entry
https://bugs.webkit.org/show_bug.cgi?id=80371
Summary
Checks for dead variables are not sufficient when fixing the expected values ...
Yuqiang Xian
Reported
2012-03-05 20:04:16 PST
A dead variable should be identified when there's no corresponding node in the block referencing it. But we currently failed to catch the case where there are some nodes referencing a variable but those nodes are actually not referenced by others so will be ignored in code generation. In such case we should also consider that variable to be a dead variable in the block and fix the expected values. This would fix the performance regression mentioned in
bug 80365
.
Attachments
proposed patch
(2.45 KB, patch)
2012-03-05 20:25 PST
,
Yuqiang Xian
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2012-03-05 20:25:01 PST
Created
attachment 130277
[details]
proposed patch
Yuqiang Xian
Comment 2
2012-03-05 22:13:04 PST
Landed as
http://trac.webkit.org/changeset/109859
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug